# duckdb-extension

./: .gitignore  CMakeLists.txt  DUCKDB-KEBOOLA-EXTENSION-SPEC.md  LICENSE  Makefile  README.md  description.yml  docker-compose.e2e.yml  extension_config.cmake  vcpkg.json
.github/workflows/: E2ETests.yml  MainDistributionPipeline.yml
examples/: 01_quick_start.py  02_read_queries.py  03_write_operations.py  04_snapshot_offline.py  05_cross_source_joins.py  06_data_quality.py  README.md
src/: keboola_catalog.cpp  keboola_delete.cpp  keboola_delete.hpp  keboola_extension.cpp  keboola_functions.cpp  keboola_functions.hpp  keboola_insert.cpp  keboola_insert.hpp  keboola_scan.cpp  keboola_scan.hpp  keboola_schema.cpp  keboola_secret.cpp  keboola_storage.cpp  keboola_table.cpp  keboola_transaction.cpp  keboola_update.cpp  keboola_update.hpp
src/http/: http_client.hpp  importer_client.cpp  importer_client.hpp  query_service_client.cpp  query_service_client.hpp  storage_api_client.cpp  storage_api_client.hpp  yyjson_utils.hpp
src/include/: keboola_catalog.hpp  keboola_connection.hpp  keboola_extension.hpp  keboola_schema.hpp  keboola_secret.hpp  keboola_storage.hpp  keboola_table.hpp  keboola_transaction.hpp
src/util/: csv_builder.cpp  csv_builder.hpp  sql_generator.cpp  sql_generator.hpp  type_mapper.cpp  type_mapper.hpp
test/: Makefile
test/docker/: Dockerfile  docker-compose.yml
test/e2e/: Dockerfile  conftest.py  pyproject.toml  test_attach.py  test_catalog.py  test_ddl.py  test_delete.py  test_insert.py  test_select.py  test_snapshot.py  test_types.py  test_update.py
test/sql/: keboola_attach.test  keboola_catalog.test  keboola_ddl.test  keboola_delete.test  keboola_errors.test  keboola_insert.test  keboola_select.test  keboola_snapshot.test  keboola_types.test  keboola_update.test
